# metarelay

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  README.md  USAGE.md  config.example.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
cloud/: setup.md
cloud/supabase/: config.toml
cloud/supabase/functions/github-webhook/: index.ts
cloud/supabase/migrations/: 20260210000000_create_events.sql
docs/: agents.md  claude.md  cloud-setup.md  installation.md  usage.md
examples/pr-shepherd/: pr-shepherd.md
github-app/: app.yml
hooks/: rewrite_links.py
src/metarelay/: __init__.py  cli.py  config.py  container.py  daemon.py
src/metarelay/adapters/: agent_dispatcher.py  cloud_client.py  local_store.py
src/metarelay/core/: errors.py  interfaces.py  models.py
src/metarelay/handlers/: registry.py  templates.py
tests/: conftest.py
tests/integration/: test_relay_flow.py
tests/unit/: test_cli.py  test_cli_full.py  test_config.py  test_container.py  test_coverage_gaps.py  test_daemon.py  test_daemon_full.py
tests/unit/adapters/: test_agent_dispatcher.py  test_cloud_client.py  test_local_store.py
tests/unit/core/: test_errors.py  test_models.py
tests/unit/handlers/: test_registry.py  test_templates.py
